fixup! Reupload lab8. WIP

--- a/lab_8/1/Makefile
+++ b/lab_8/1/Makefile
@@ -1,7 +1,7 @@
 all: build
 
 build:
-	g++ main.cpp lab.cpp MatrixDimensions.cpp
+	g++ main.cpp lab.cpp MatrixDimensions.cpp -std=c++17
 
 build-debug:
-	g++ main.cpp lab.cpp MatrixDimensions.cpp -g
+	g++ main.cpp lab.cpp MatrixDimensions.cpp -g -std=c++17
